# assemblability-assessment

build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  registration_visualization.cbp
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/.cmake/api/v1/reply/: cache-v2-d3d3e31428005cf2f44f.json  cmakeFiles-v1-adf695a415283287082a.json  codemodel-v2-0f93132bd9fd24e746fa.json  directory-cloud_dataprocess-Debug-44b65d6c6f38a5dfb2a6.json  directory-global-Debug-524b1821de52cc0ba64b.json  directory-qt_mainwindow-Debug-42fa75ae9775acbc217c.json  index-2023-04-21T10-47-38-0643.json  target-cloud_dataprocess-Debug-8d2d409a0abc02883927.json  target-cloud_dataprocess_autogen-Debug-1c87c8854b699ef46c46.json  target-global_config-Debug-5ad873134021baf4eb5f.json  target-global_config_autogen-Debug-e12da7e7db098840856c.json  target-qt_mainwindow-Debug-c4fb86e734eb29b75e7b.json  target-qt_mainwindow_autogen-Debug-ab377cc957aca9ecc1b7.json  target-registration_visualization-Debug-aab026870085ce6bf390.json  target-registration_visualization_autogen-Debug-fe1e0d388222bc4d5f62.json
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/cloud_dataprocess/: Makefile  cmake_install.cmake
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/cloud_dataprocess/cloud_dataprocess_autogen/: mocs_compilation.cpp
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/cloud_dataprocess/cloud_dataprocess_autogen/EWIEGA46WW/: moc_pcl_process.cpp  moc_vtk_process.cpp
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/global/: Makefile  cmake_install.cmake  global_config.lib
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/main/: Makefile  cmake_install.cmake  qrc_tool-icon.cpp
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/pcl_dataprocess/: Makefile  cmake_install.cmake
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/qt_mainwindow/: Makefile  cmake_install.cmake  ui_cloud_item_widget.h  ui_mainwindow.h  ui_vtk_widget.h
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/qt_mainwindow/qrc/: tool-icon.qrc.depends
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/qt_mainwindow/qt_mainwindow_autogen/: mocs_compilation.cpp
build-src-Desktop_Qt_5_14_2_MSVC2017_64bit-Debug/qt_mainwindow/qt_mainwindow_autogen/EWIEGA46WW/: moc_cloud_item_widget.cpp  moc_mainwindow.cpp  moc_vtk_widget.cpp
cmake/: FindPCLWrapper.cmake  FindVTK.cmake
src/: CMakeLists.txt
src/CollideDetect/: CMakeLists.txt  bvhMeshClosestPointsDetector.cpp  bvhMeshClosestPointsDetector.h
src/GlobalConfig/: CMakeLists.txt  global_config.cpp  global_config.h
src/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/MeshProcess/: CMakeLists.txt  mesh_process.cpp  mesh_process.h
src/PointCloudProcess/: CMakeLists.txt  point_cloud_process.cpp  point_cloud_process.h
src/PropertyDataBase/: CMakeLists.txt  property_database.cpp  property_database.h
src/SubDialog/: CMakeLists.txt  action_param_dialog.cpp  action_param_dialog.h
src/SubWidget/: CMakeLists.txt  cloud_item_widget.cpp  cloud_item_widget.h  cloud_item_widget.ui  vtk_widget.cpp  vtk_widget.h  vtk_widget.ui
src/main/: CMakeLists.txt  main.cpp
src/qrc/: tool-icon.qrc
